test_suite/tests/ui/string/derive/invalid_char.stderr
error: Unexpected `!`
 --> tests/ui/string/derive/invalid_char.rs:4:19
  |
4 | #[derive(Debug, , !)]
  |                   ^
