test_suite/tests/ui/string/derive/invalid_char.rs
use nutype::nutype;

#[nutype(sanitize(trim))]
#[derive(Debug, , !)]
struct Name(String);

fn main() {}
